# diff.rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Justfile  LICENSE.md  README.md  Trunk.toml  build.rs  deny.toml  flake.nix  index.html  rust-toolchain.toml  rustfmt.toml  tailwind.config.js
.github/workflows/: ci.yml
data/: axum.json  log-0.1.1.crate  log-0.4.15.crate  log-0.4.16.crate  log-0.4.17.crate  log.json  reqwest.json  serde.json  wireguard-keys-0.1.0.crate  wireguard-keys.json
docs/: architecture.md  contributing.md  deployment.md  maintenance.md
src/: app.rs  cache.rs  components.rs  crates.rs  data.rs  lib.rs  main.rs  router.rs  syntax.rs  tailwind.css  tests.rs  version.rs  views.rs
src/components/: diff_view.rs  file_tree.rs  footer.rs  layout.rs  legacy.rs  navigation.rs  non_ideal.rs  search.rs
src/views/: about.md  about.rs  diff.rs  home.rs  not_found.rs  repo.rs  search.rs
static/: counter.js  style.css
