[package]
name = "diff-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
flate2 = "1.0.25"
futures = "0.3.26"
gloo-net = "0.4.0"
implicit-clone = "0.4.9"
itertools = "0.11.0"
log = "0.4.17"
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_typename = "0.1.0"
similar = { version = "2.2.1", features = ["text", "bytes"] }
strum = { version = "0.26.2", features = ["derive"] }
subslice-offset = "0.1.1"
tar = "0.4.38"
url = { version = "2.3.1", features = ["serde"] }
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew_icons = { version = "0.8.0", features = ["LucideBox", "LucideFileDiff"] }
yewprint = { version = "0.5" }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[dev-dependencies]
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["macros", "rt"] }
