[package]
name = "diff-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
flate2 = "1.0.25"
gloo-net = "0.6.0"
hex = { version = "0.4.3", features = ["serde"] }
implicit-clone = "0.4.9"
indexmap = "2.2.6"
itertools = "0.13.0"
log = "0.4.17"
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
sha2 = "0.10.8"
similar = { version = "2.2.1", features = ["text", "bytes"] }
strum = { version = "0.26.2", features = ["derive"] }
syntect = { version = "5.0.0", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-fancy"] }
subslice-offset = "0.1.1"
tar = "0.4.38"
url = { version = "2.3.1", features = ["serde"] }
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.1"
yew-router = "0.18.0"
yew_icons = { version = "0.8.0", features = ["LucideBox", "LucideFileDiff"] }
yewprint = { version = "0.5" }
lazy_static = "1.5.0"
thiserror = "1.0.64"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[dev-dependencies]
serde_json = "1.0.94"

[build-dependencies]
vergen-gitcl = { version = "1.0.1", features = [] }

[package.metadata.cargo-machete]
ignored = ["hex"]
