[package]
name = "diff-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
description = "Web application that renders the diff between two crate versions"

[dependencies]
anyhow = "1.0.69"
bytes = "1.4.0"
camino = "1.1.9"
flate2 = "1.0.25"
gloo-net = "0.6.0"
hex = { version = "0.4.3", features = ["serde"] }
implicit-clone = "0.4.9"
indexmap = "2.2.6"
itertools = "0.13.0"
lazy_static = "1.5.0"
log = "0.4.17"
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.132"
sha2 = "0.10.8"
similar = { version = "2.2.1", features = ["text", "bytes"] }
strum = { version = "0.26.2", features = ["derive"] }
subslice-offset = "0.1.1"
syntect = { version = "5.0.0", default-features = false, features = ["parsing", "default-syntaxes", "default-themes", "regex-fancy"] }
tar = "0.4.38"
thiserror = "1.0.64"
url = { version = "2.3.1", features = ["serde"] }
wasm-logger = "0.2.0"
web-sys = { version = "0.3.61", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.1"
yew-router = "0.18.0"
yew_icons = { version = "0.8.0", features = ["LucideBox", "LucideFileDiff"] }
yewprint = { version = "0.5" }

# enable LTO and use a single codegen-unit to get smaller and more efficient code.
[profile.release]
lto = true
opt-level = 3
codegen-units = 1

# override optimization level of some dependencies for debug mode
[profile.dev.package.syntect]
opt-level = 2
[profile.dev.package.regex]
opt-level = 2
[profile.dev.package.regex-automata]
opt-level = 2
[profile.dev.package.regex-syntax]
opt-level = 2
[profile.dev.package.fancy-regex]
opt-level = 2
[profile.dev.package.flate2]
opt-level = 2
[profile.dev.package.similar]
opt-level = 2

[dev-dependencies]
# used to parse test data
serde_json = "1.0.94"

[build-dependencies]
# used to get commit hash when building
vergen-gitcl = { version = "1.0.1", features = [] }

[package.metadata.cargo-machete]
# we don't use hex directly, but we use it as a serde deserializer.
ignored = ["hex"]
